# near-jsonrpc-client-py

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
examples/: account.py  blocks.py  config.py  network.py  query.py  tx.py
generator/: api_generator.py  client_test_generator.py  model_generator.py  model_test_generator.py
generator/helpers/: name_resolvers.py
near_jsonrpc_client/: __init__.py
tests/: .gitignore
